<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="SensorValues" Id="{a641c7d6-b5be-44af-8c73-a73c3c799df5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	rCO2Value AT %Q* : REAL;
	rPressure AT %Q* : REAL;
	rHumidity AT %Q* : REAL;
	rTemperature AT %Q* : REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>